knowledge/knowledgeService.yml
apiVersion: v1
kind: Service
metadata:
  name: knowledge-service
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080

  selector:
    app: knowledge-app-knowledge
