knowledge/knowledgeService_posgre.yml
apiVersion: v1
kind: Service
metadata:
  name: knowledge-postgres-service
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: knowledge-app-posgre-deploy
